Integration of the new template with CodeMatch back-end

--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -27,7 +27,7 @@
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="icon ion-arrow-shrink" ></i> CodeMatches </a>
 			<ul class="dropdown-menu" role="menu">
 				<li>
-					<a href="code_matches.html" rel="nofollow">All CodeMatches</a>
+					<a href="{% url "ietf.codematch.views.showlist" %}">All CodeMatches</a>
 				</li>
 				<li>
 					<a href="my_code_matches.html">My CodeMatches</a>
