--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -8,13 +8,14 @@
 <div class="content">
 
   	  	<!-- Main bar -->
-  	<div class="mainbar" style="background:none; min-">
-     <div style="padding:50px">
+  	<div class="mainbar">
+     <div>
 		<!-- Widget title -->
 		<div>
 		  <h2>Hi! Welcome to IETF CodeMatch!</h2>
 		  <div class="clearfix"></div>
 		</div>
+		
 		<div >
 			 <div class="padd">
 		  <!-- Widget content -->
