--- a/ietf/templates/codematch/new.html
+++ b/ietf/templates/codematch/new.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_codematch.html" %}
 
 {% load ietf_filters bootstrap3 widget_tweaks %}
 {% load future %}
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="content">
 <h1>Create a New Codematch Project</h1>
 
   {% bootstrap_messages %}
@@ -30,6 +30,6 @@
     <p>
     <input type="submit" value="Submit" />
 </form>
-
+</div>
 {% endblock %}
 
