Correct manu button bg collor

--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -19,7 +19,7 @@
 
     <!-- Analyse whether these stylesheets are used in base file, if not, add it through 'morecss' in the specific page -->
   <!-- Stylesheets -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.css" rel="stylesheet">
   <!-- Font awesome icon -->
   <link rel="stylesheet" href="/css/font-awesome.min.css">
   <!-- Ionicons icon -->
