--- a/ietf/templates/codematch/list.html
+++ b/ietf/templates/codematch/list.html
@@ -35,7 +35,18 @@
         
         <div class="matter">
             <div class="container">
-                
+                <div class="alert alert-info">
+			        <p>
+						Multiple development efforts can occur around a single draft or RFC, enabling collaboration between development efforts and opportunities for organizing plugfest and hackaton events.  
+			        </p>
+			
+			        <p>
+					  The IETF takes no position regarding the validity or scope of any
+					  intellectual property rights or other rights that might be claimed to
+					  pertain to the implementation or use of the technology described in any IETF documents or the extent to
+					  which any license under such rights might or might not be available; nor does it represent that it has made any independent effort to identify any such rights.
+			        </p>
+			      </div>
                 <!-- Recent News -->
                 <div class="col-md-12">
                     <div class="widget">
@@ -68,7 +79,6 @@
                             </div>
                             <div class="widget-foot">
                                 <p class="buttonlist">
-                                <a class="btn btn-default" href="{% url "ietf.codematch.views.about" %}">About</a>
                                 <a class="btn btn-default" href="{% url "ietf.codematch.views.new" %}">New CodeMatch Project</a>
                                 <a class="btn btn-default" href="{% url "ietf.codematch.views.search" %}">Search</a>
                                 </p>
