--- a/ietf/templates/codematch/new.html
+++ b/ietf/templates/codematch/new.html
@@ -13,32 +13,91 @@
 {% endblock %}
 
 {% block content %}
-<div class="content">
-<h1 class="col-xs-offset-1">Create a New Codematch Project</h1>
-<br />
-  {% bootstrap_messages %}
+<div class="content" style="padding:0">
+    
+    <!-- Main bar -->
+    <div class="mainbar">
+        
+        <!-- Page heading -->
+        <div class="page-head">
+            <h2 class="pull-left"><i class="icon ion-arrow-shrink" style="font-size: 20px;"></i> CodeMatches</h2>
+            
+            <!-- Breadcrumb -->
+            <div class="bread-crumb pull-right">
+                <a href="#"><i class="fa fa-home"></i> Home</a>
+                <!-- Divider -->
+                <span class="divider">/</span>
+                <a href="#" class="bread-current">CodeMatches</a>
+                <span class="divider">/</span>
+                <a href="#" class="bread-current">New</a>
+            </div>
+            
+            <div class="clearfix"></div>
+            
+        </div>
+        <!-- Page heading ends -->
+        
+        <!-- Matter -->
+        
+        <div class="matter">
+            <div class="container">
+                
+                <!-- Recent News -->
+                <div class="col-md-12">
+                    <div class="widget">
+                        <!-- Widget title -->
+                        <div class="widget-head">
+                            <div class="pull-left">
+                                Creating a new CodeMatch Project
+                            </div>
+                            <div class="widget-icons pull-right">
+                                <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a>
+                                <a href="#" class="wclose"><i class="fa fa-times"></i></a>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="widget-content referrer">
+                            <!-- Widget content -->
+                            <form class="form-horizontal" action="/codematch/new/" method="post">
+                            <div class="padd">
 
-<form class="form-horizontal" action="/codematch/new/" method="post">
-
-    {{ formset.management_form }}
-    {% csrf_token %}
-    {% for form in formset %}
-	{% for field in form %}
-	<div class="form-group">
-		<label class="control-label col-xs-1">{{ field.name }}</label>
-		<div class="col-xs-4">
-			{{ field }}
-		</div>
-	</div>
-	{% endfor %}
-    {% endfor %}
-    <div class="form-group">
-    	<div class="col-xs-offset-4">
-    		<input type="submit" class="btn btn-primary" value="Submit" />
-    	
-    		<a class="btn btn-default " href="{% url "ietf.codematch.views.showlist" %}">Back</a>
-    	</div>
+							    {{ formset.management_form }}
+							    {% csrf_token %}
+							    {% for form in formset %}
+									{% for field in form %}
+									<div class="form-group">
+										<label class="control-label col-xs-1">{{ field.name }}</label>
+										<div class="col-xs-4">
+											{{ field }}
+										</div>
+									</div>
+									{% endfor %}
+							    {% endfor %}
+							    
+							</div>
+                            <div class="widget-foot">
+                                <p class="buttonlist">
+                                	<div class="col-xs-offset-1">
+								    	<input type="submit" class="btn btn-primary" value="Submit" />
+                                		<a class="btn btn-default " href="{% url "ietf.codematch.views.showlist" %}">Back</a>
+                                	</div>
+                                </p>
+                            </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        
+        <!-- Matter ends -->
+        
     </div>
-</form>
+    
+    <!-- Mainbar ends -->
+    <div class="clearfix"></div>
+    
 </div>
+<!-- Content ends -->
 {% endblock %}
