--- a/ietf/templates/codematch/search.html
+++ b/ietf/templates/codematch/search.html
@@ -3,14 +3,80 @@
 {% block title %}CodeMatch Projects Search{% endblock %}
 
 {% block content %}
-<div class="content">
-  <h1>CodeMatch Search</h1>
+<div class="content" style="padding:0">
 
-  {% include "codematch/search_form.html" %}
+	<!-- Main bar -->
+	<div class="mainbar">
 
-  {% if meta.searching %}
-    {% include "codematch/search_result.html" %}
-  {% endif %}
- <div class="content">
- 	
+		<!-- Page heading -->
+		<div class="page-head">
+			<h2 class="pull-left"><i class="icon ion-arrow-shrink" style="font-size: 20px;"></i> CodeMatches</h2>
+
+			<!-- Breadcrumb -->
+			<div class="bread-crumb pull-right">
+				<a href="#"><i class="fa fa-home"></i> Home</a>
+				<!-- Divider -->
+				<span class="divider">/</span>
+				<a href="#" class="bread-current">CodeMatches</a>
+				<span class="divider">/</span>
+				<a href="#" class="bread-current">Search</a>
+			</div>
+
+			<div class="clearfix"></div>
+
+		</div>
+		<!-- Page heading ends -->
+
+		<!-- Matter -->
+
+		<div class="matter">
+			<div class="container">
+
+				<!-- Recent News -->
+				<div class="col-md-12">
+					<div class="widget">
+						<!-- Widget title -->
+						<div class="widget-head">
+							<div class="pull-left">
+								Search
+							</div>
+							<div class="widget-icons pull-right">
+								<a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a>
+								<a href="#" class="wclose"><i class="fa fa-times"></i></a>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+						<div class="widget-content referrer">
+							<!-- Widget content -->
+								<div class="padd">
+									{% include "codematch/search_form.html" %}
+
+									{% if meta.searching %}
+									{% include "codematch/search_result.html" %}
+									{% endif %}
+								</div>
+								<div class="widget-foot">
+									<p class="buttonlist">
+										
+											<a class="btn btn-default " href="{% url "ietf.codematch.views.showlist" %}">Back</a>
+										
+									</p>
+								</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<!-- Matter ends -->
+
+	</div>
+
+	<!-- Mainbar ends -->
+	<div class="clearfix"></div>
+
+</div>
+<!-- Content ends -->
+
 {% endblock content %}
