Atualizando referências entreas telas

--- a/ietf/templates/codematch/list.html
+++ b/ietf/templates/codematch/list.html
@@ -20,7 +20,7 @@
             
             <!-- Breadcrumb -->
             <div class="bread-crumb pull-right">
-                <a href="#"><i class="fa fa-home"></i> Home</a>
+                <a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a>
                 <!-- Divider -->
                 <span class="divider">/</span>
                 <a href="#" class="bread-current">CodeMatches</a>
