--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -24,7 +24,7 @@
 		  <div style="margin: 20px 0">
 			<i class="icon ion-arrow-shrink" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="{% url "ietf.codematch.views.showlist" %}">CodeMatches</a><br />
+			<a href="{% url "ietf.codematch.matches.views.showlist" %}">CodeMatches</a><br />
 			Who's Implementing what?</p>
 		  </div>
 		  
