--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -13,7 +13,7 @@
 			<span>Menu</span>
 		  </button>
 		  <!-- Site name for smallar screens -->
-		  <a href="{% url "ietf.codematch.views.index" %}" class="navbar-brand" ><img src="/images/ietflogo-small-transparent.png" /></a>
+		  <a href="#" class="navbar-brand" ><img src="/images/ietflogo-small-transparent.png" /></a>
 		</div>
       <ul class="nav navbar-nav">	
 	  <li class="dropdown">
@@ -27,7 +27,7 @@
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="icon ion-arrow-shrink" ></i> CodeMatches </a>
 			<ul class="dropdown-menu" role="menu">
 				<li>
-					<a href="{% url "ietf.codematch.views.showlist" %}">All CodeMatches</a>
+					<a href="{% url "ietf.codematch.matches.views.showlist" %}">All CodeMatches</a>
 				</li>
 				<li>
 					<a href="#">My CodeMatches</a>
