Implementacao dos CodeRequests e refatoracao dos CodeMatches

--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -39,7 +39,7 @@
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-microphone" ></i> CodeRequests </a>
 			<ul class="dropdown-menu" role="menu">
 				<li>
-					<a href="#" rel="nofollow">All CodeRequests</a>
+					<a href="{% url "ietf.codematch.requests.views.showlist" %}">All CodeRequests</a>
 				</li>
 				<li>
 					<a href="#">My CodeRequests</a>
