--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -90,7 +90,7 @@
 	    <div class="text-center">
 	      <p class="small text-muted">
 	        {% if version_num %}
-		  <a href="{% url "ietf.codematch.matches.views.about" %}">About</a> |
+		  <a href="{% url "ietf.codematch.views.about" %}">About</a> |
 	          IETF CodeMatch |
 	          <a href="/release/{{version_num}}/">Version {{ version_num }}</a>
 	          | {{revision_date}} |
