--- a/ietf/templates/codematch/about.html
+++ b/ietf/templates/codematch/about.html
@@ -122,7 +122,7 @@ While the IETF focuses on shorter term issues such as engineering and standards 
 </div>
                             <div class="widget-foot">
                                 <p class="buttonlist">
-                                	<a class="btn btn-default " href="{% url "ietf.codematch.views.showlist" %}">Back</a>
+                                	<a class="btn btn-default " href="{% url "ietf.codematch.views.index" %}">Back</a>
                                 </p>
                             </div>
                         </div>
