--- a/ietf/templates/codematch/matches/show.html
+++ b/ietf/templates/codematch/matches/show.html
@@ -6,7 +6,7 @@
 
 <p>
 	{% block pagehead %}
-	<meta name="description" content="CodeMatch #{{projectcontainer.projectcontainer_id}}: {{ projectcontainer.Title }} ({{ projectcontainer.Protocol }})" />
+	<meta name="description" content="CodeMatch #{{projectcontainer.id}}: {{ projectcontainer.title }} ({{ projectcontainer.protocol }})" />
 	{% endblock %}
 
 	{% block content %}
@@ -65,11 +65,11 @@
 
 											<div class="row">
 												<div class="col-md-4">
-													<strong>By:</strong><a href="#">?</a>
+													<strong>By:</strong><a href="#">{{ coding.coder }}</a>
 													<br />
-													<strong>Mentor:</strong><a href="#">?</a>
+													<strong>Mentor:</strong><a href="#">{{ projectcontainer.code_request.mentor }}</a>
 													<br />
-													<strong>CodeRequest:</strong> External
+													<strong>CodeRequest:</strong> {{ projectcontainer.code_request.id }}
 													<br />
 													<strong>Protocol:</strong><a href="#">{{ projectcontainer.protocol }}</a>
 													<br />
@@ -99,11 +99,11 @@
 
 											<h4><strong>Documents</strong></h4>
 											{% for doc in docs %}
-											{{ doc.document.group }}: <a  href="https://datatracker.ietf.org/doc/{{ doc.name}}"> {{ doc.name }} </a>
+											{{ doc.document.group }}: <a  href="https://datatracker.ietf.org/doc/{{doc.name}}"> {{ doc.name }} </a>
 											<br />
 											{% endfor %}
 											<hr />
-											<form action="/codematch/{{pk}}/" method="post">
+											<form action="/codematch/matches/{{pk}}/" method="post">
 												{{ docform }}
 												{% csrf_token %}
 												<input type="submit" value="Add related Document" />
@@ -111,42 +111,13 @@
 											<br />
 											<br />
 
-											<h4><strong>Implementations</strong></h4>
+											<h4><strong>Implementation</strong></h4>
 											<ul>
-												{% for coding in codings %}
 												<li>
 													<a  href="{{coding.link_to_implementation}}"> {{ coding.title }}</a>: {{ coding.additional_information }}
 												</li>
-												{% endfor %}
 											</ul>
 											<hr />
-											<form class="form-horizontal" action="/codematch/{{pk}}/" method="post">
-												<div class="form-group">
-													<label class="control-label col-xs-2">Title:</label>
-													<div class="col-xs-4">
-														{{ codeform.title }}
-													</div>
-												</div>
-												<div class="form-group">
-													<label class="control-label col-xs-2">Info:</label>
-													<div class="col-xs-4">
-														{{ codeform.additional_information}}
-													</div>
-												</div>
-												<div class="form-group">
-													<label class="control-label col-xs-2">Link To Implementation:</label>
-													<div class="col-xs-4">
-														{{ codeform.link_to_implementation}}
-													</div>
-												</div>
-
-												{% csrf_token %}
-												<div class="form-group">
-													<div class="col-xs-offset-2">
-														<input type="submit" value="Add Implementation" />
-													</div>
-												</div>
-											</form>
 										</div>
 
 									</div>
